--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "pinia": "^2.1.7",
+    "swiper": "^11.0.5",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
