--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,6 +7,7 @@
     "nightwatch.conf.*",
     "playwright.config.*"
   ],
+  "files": ["src/types/news.ts"],
   "compilerOptions": {
     "composite": true,
     "noEmit": true,
